
# the include files to install


# install headers in '$prefix/include/$pkgincludedir'
# i.e: /usr/local/include/myskl

# pkginclude_HEADERS = myskl.h private/skl_defs.h

#pkginclude_HEADERS =        \
#     private/skl_threads.h  \
#     private/skl_checks.h   \
#     private/skl_protos.h   \
#     private/skl_debug.h    \
#     private/skl_types.h    \
#     private/skl_fatal.h    \
#     private/skl_warn.h     \
#     private/skl_conf.h     \
#     private/skl_priv.h     \
#     private/skl_rand.h     \
#     extra/dbug/dbug.h      \
#     myskl.h

# install headers in '$prefix/include'
# i.e: /usr/local/include

include_HEADERS = myskl.h private/skl_defs.h

# include_HEADERS =          \
#     private/skl_threads.h  \
#     private/skl_checks.h   \
#     private/skl_protos.h   \
#     private/skl_debug.h    \
#     private/skl_types.h    \
#     private/skl_fatal.h    \
#     private/skl_warn.h     \
#     private/skl_conf.h     \
#     private/skl_priv.h     \
#     private/skl_rand.h     \
#     extra/dbug/dbug.h      \
#     myskl.h


# discard the includes below when installing
noinst_HEADERS =              \
     private/skl_threads.h    \
     private/skl_checks.h     \
     private/skl_protos.h     \
     private/skl_debug.h      \
     private/skl_mstat.h      \
     private/skl_fatal.h      \
     private/skl_warn.h       \
     private/skl_conf.h       \
     private/skl_priv.h       \
     private/skl_rand.h       \
     extra/dbug/dbug.h        \
     extra/dbug/dbug-ts-ext.h \
     private/rwlock.h         \
     private/errors.h